frontend/app/globals.css
@import "tailwindcss";
@tailwind utilities;

:root {
  --bg-primary: #ffffff;
  --bg-secondary: #f4f4f4;

  --button-primary: #0f62fe;

  --chart-background: #f9fafb;
  --points-color: #9f16b4;

  --text-primary: #161616;
  --text-secondary: #525252;
  --text-tertiary: #8d8d8d;

  --border-primary: #e0e0e0;
  --border-secondary: #8d8d8d;

  --custom-preview : #F5C4CF;
  --custom-preview-dark : #E05A7A;
  --custom-analysis : #A8EDED;
  --custom-analysis-dark : #3ddbd9;
  --custom-analytics : #FCE0A8;
  --custom-analytics-dark : #FFC166;

  --custom-gradient-red: linear-gradient(135deg, var(--custom-preview) 0%, var(--custom-preview-dark) 100%);
  --custom-gradient-blue: linear-gradient(135deg, var(--custom-analysis) 0%, var(--custom-analysis-dark) 100%);
  --custom-gradient-green: linear-gradient(135deg, var(--custom-analytics) 0%, var(--custom-analytics-dark) 100%);
  --accent-line-gradient: linear-gradient(90deg, var(--text-primary) 0%, transparent 100%);
  --custom-gradient-logo: linear-gradient(90deg, #1f2937 0%, #374151 100%,);
}

.dark {
  --bg-primary: #161616;
  --bg-secondary: #262626;

  --chart-background: #393939;

  --text-primary: #f4f4f4;
  --text-secondary: #c6c6c6;
  --text-tertiary: #8d8d8d;

  --border-primary: #393939;
  --border-secondary: #6f6f6f;
}

@theme {
  --font-family-sans: 'IBM Plex Sans', sans-serif;
  --font-family-mono: 'IBM Plex Mono', monospace;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-plex-sans);
  --font-mono: var(--font-plex-mono);

  --color-custom-red : var(--custom-red);
  --color-custom-blue : var(--custom-blue);
  --color-custom-green : var(--custom-green);

  --background-image-gradient-red: var(--custom-gradient-red); /* use like bg-gradient-red */
  --background-image-gradient-blue: var(--custom-gradient-blue);
  --background-image-gradient-green: var(--custom-gradient-green);

  --background-image-gradient-preview: var(--custom-gradient-red); /* use like bg-gradient-red */
  --background-image-gradient-analysis: var(--custom-gradient-blue);
  --background-image-gradient-analytics: var(--custom-gradient-green);

  --background-image-gradient-accent-line: var(--accent-line-gradient);

  --background-color-primary : var(--bg-primary);
  --background-color-secondary : var(--bg-secondary);
  --background-color-tertiary : var(--bg-tertiary);

  --border-color-primary : var(--border-primary);
  --border-color-secondary : var(--border-secondary);
  --text-color-primary : var(--text-primary);
  --text-color-secondary : var(--text-secondary);
  --text-color-tertiary : var(--text-tertiary);
}

body {
  background-color: var(--bg-primary);
  font-family: var(--font-plex-sans), sans-serif;
  color: var(--text-primary);
  transition: background-color 0.3s, color 0.3s;
}

.pillar-container {
  overflow: hidden; 
  height: 90vh; 
}

.plot-container-plot-video {
  display: flex; 
  padding: 0.5rem; 
  flex-direction: row; 
  gap: 0.5rem; 
  justify-content: center; 
  align-items: start; 
  width: 100%; 
  height: 100%; 
}

.plot-container-plot {
  object-fit: contain; 
  overflow: auto; 
  height: 90%; 
  width: 70%;
}

.video-panel {
  display: flex; 
  flex-direction: column; 
  row-gap: 0.5rem; 
  align-items: center; 
  justify-content: start;
  width: 30%;
  height: 95%;
}

.video-panel-video-container {
  display: flex; 
  flex-direction: column; 
  align-items: center;
  justify-content: start;
  border: 1px solid var(--border-primary);
  height: 45%; 
  width: 100%;
}

.video-panel-video {
  height: 95%;
  width: 100%;
  object-fit: fill;
}

.video-panel-text {
  font-size: 0.75rem;
  padding: 8px;
  background-color: var(--bg-primary);
  overflow-wrap: break-word;
  text-align: center;
  width: 100%;
}

.plot-option-pill { 
  padding: 0 16px; 
  height: 36px; 
  border-width: 1px; 
  font-size: 1.125rem;
  line-height: 1.75rem; 
  text-align: center;
  color: var(--text-primary);
  font-size: 0.8125rem;
  transition: all 0.15s ease-in-out; 
  cursor: pointer;
  vertical-align: middle;
}
.plot-option-pill:hover {
  background-color: var(--bg-primary);
  color: var(--text-primary);
}
.plot-option-pill-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap; 
  margin-top: 56px;
  margin-left: 16px; 
  gap: 12px; 
  justify-content: start; 
  align-items: center; 
}

.text-h3 {
  font-size: 0.875rem;
  color: var(--text-secondary);
}

.filter-select {
height: 2rem;
padding-top: 0rem;
padding-bottom: 0rem;
padding-right: 2rem;
padding-left: 0.75rem;
background-color: var(--bg-primary);
border-color: var(--border-secondary);
color: var(--text-primary);
font-size: 0.875rem;
cursor: pointer;
}
.filter-select:hover {
  border-color: var(--border-primary);
}

